# deptex

./: .env.example  .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  MAPPING.md  Proposal for semester.md  README.md  depscore.md  docker-compose.yml  fly.fix-worker.toml  fly.md  package-lock.json
.claude/: settings.local.json
.github/: dependabot.yml
backend/: .gitignore  .vercelignore  README.md  check-ghsa.ts  jest.config.js  jest.globalTeardown.js  jest.setup.js  load-ee-routes.js  package-lock.json  package.json  test-aegis-analysis.ts  tsconfig.json  tsconfig.vercel.json  vercel.json
depscanner/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json
depscanner/test-repos/axum/: .env.example  Cargo.toml  Dockerfile  README.md  k8s.yaml
depscanner/test-repos/axum/.deptex/: SOURCE.md  deploy.sh  expected.yaml
depscanner/test-repos/axum/src/: main.rs  repo.rs
depscanner/test-repos/axum/src/handlers/: archive.rs  command.rs  config.rs  deser.rs  files.rs  logging.rs  mod.rs  redirect.rs  redos.rs  search.rs  sql.rs  ssrf.rs  upload.rs
depscanner/test/fixtures/precision/rust-build-dep/: Cargo.toml
docs/: 88-cve-benchmark-2026-05-10-wave10.md  88-cve-benchmark-2026-05-10-wave8.md  88-cve-benchmark-2026-05-10.md  88-cve-scoreboard-plan.md  README.md  adding-a-new-ecosystem.md  adding-a-new-integration.md  ai-provider-audit-2026-05-10.md  contributor-test-infra-plan.md  custom-integration-details-sidebar-prompt.md  cve-reachability-future-plan.md  dast-openapi-plan.md  debug-extraction-status.md  dependency-screens.md  depscanner-hardening-report.md  depscanner.md  depscore.md  flow-code-sandbox.md  (+15 more)
(+3719 files in other folders)
