[package]
name = "deptex-dogfood-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
reqwest = "0.11"
regex = "1.8"
tracing = "0.1"
# Reachable: RUSTSEC-2018-0006 — uncontrolled recursion in YamlLoader::load_from_str.
yaml-rust = "=0.4.0"
# Unreachable: declared but never imported by src/.
time = "0.1.43"
